<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/pad16">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot1"
        android:textSize="@dimen/sp20"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/pad16" />
  
    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="@dimen/sp16"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/pad16" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:layout_marginBottom="@dimen/pad16" />

</LinearLayout>
