<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/pad16">

    <EditText
        android:id="@+id/itemNameField"
        android:layout_width="@dimen/pad0"
        android:layout_height="wrap_content"
        android:hint="@string/itemName"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginTop="@dimen/pad5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/quantityField"
        android:layout_width="@dimen/pad0"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginTop="@dimen/pad16"
        app:layout_constraintTop_toBottomOf="@id/itemNameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/priceField"
        android:layout_width="@dimen/pad0"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginTop="@dimen/pad16"
        app:layout_constraintTop_toBottomOf="@id/quantityField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
